--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
-<head th:replace="base :: head"></head>
+<head>
+    <meta charset="UTF-8">
+    <title>Payment</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <th:block th:insert="base :: Bootstrap"></th:block>
+</head>
 <body>
-<nav th:replace="base :: navbar"></nav>
 
-<h4>New User Registration</h4>
+<div th:replace="base::navbar"></div>
+<div class="container">
+    <div class="jumbotro lead text-center">
+<br>
+<h4 align="center"> Update user information! </h4>
 
-<form autocomplete="off" action="#" th:action="@{/process}" th:object="${user}" method="post">
-
+<form autocomplete="off" action="#"
+      th:action="@{/process}"
+      th:object="${user}"
+      method="post">
     <input type="hidden" th:field="*{id}"/>
 
     First Name
@@ -19,8 +31,9 @@
                 </span>
         </strong>
     </mark>
-    <input type="text" id="firstName" placeholder="First Name" th:field="*{firstName}"/><br/>
 
+    <input type="text" id="firstName" placeholder="First Name" th:field="*{firstName}"/><br/>
+    <br>
     Last Name
     <mark>
         <strong>
@@ -29,8 +42,9 @@
                 </span>
         </strong>
     </mark>
-    <input type="text" id="lastName" placeholder="Last Name" th:field="*{lastName}"/><br/>
 
+    <input type="text" id="lastName" placeholder="Last Name" th:field="*{lastName}"/><br/>
+    <br>
     Email
     <mark>
         <strong>
@@ -39,8 +53,9 @@
                 </span>
         </strong>
     </mark>
-    <input type="text" id="email" placeholder="Email" th:field="*{email}"/><br/>
 
+    <input type="text" id="email" placeholder="Email" th:field="*{email}"/><br/>
+    <br>
     Username
     <mark>
         <strong>
@@ -49,8 +64,9 @@
                 </span>
         </strong>
     </mark>
-    <input type="text" id="username" placeholder="Username" th:field="*{username}"/><br/>
 
+    <input type="text" id="username" placeholder="Username" th:field="*{username}"/><br/>
+    <br>
     Password
     <mark>
         <strong>
@@ -59,8 +75,9 @@
                 </span>
         </strong>
     </mark>
-    <input type="text" id="password" placeholder="Password" th:field="*{password}"/><br/>
 
+    <input type="text" id="password" placeholder="Password" th:field="*{password}"/><br/>
+    <br>
 <!--    <div sec:authorize="hasAuthority('ADMIN')">-->
 <!--    Roles-->
 
@@ -71,10 +88,11 @@
 <!--        <input type="radio" value="USER" id="user" th:field="*{roles}"/><br/>-->
 <!--    </div>-->
 
-    <button type="submit" class="btn btn-default">Submit</button>
-
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <br>
 </form>
-
-<div th:replace="base :: javascript"></div>
+    </div>
+</div>
 </body>
+<div th:replace="base::footer"></div>
 </html>
