Updated the payment form to try and get the card and flight info to attach to the user

--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -111,6 +111,7 @@
     <form autocomplete="off" action="#" th:action="@{/payment}" th:object="${card}" method="post">
         <input th:field="*{id}" type="hidden"/>
 
+        <input type="hidden" th:field="*{user}" th:value="${user}"/>
 
             <div class="form-group">
                 <label for="cardNumber">Debit/Credit card Number <img src="https://res.cloudinary.com/duqszimh4/image/upload/c_thumb,w_200,g_face/v1564774511/credit-cards_fuhuaq.gif"> </label>
