--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -13,7 +13,7 @@
 
 <div class="container">
 
-    <h2>Flight Information</h2>
+    <h2>Ticket Information</h2>
     <table class="table table-hover table-striped" style="width:100%">
 
         <thead class="thead-light">
