--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
 
 
 
-<div class="container">
+    <div class="container">
     <br/><br/><br/><br/>
 
     <div class="jumbotron" th:each="flight : ${flights}">
@@ -47,6 +47,8 @@
         <p th:inline="text"> Departing time <i>[[${flight.startTime}]]</i>
             Returning time <i> [[${flight.endTime}]]</i></p>
             <p th:if="${flight.roundTrip == true }"> This flight is round trip. </p>
+            <p th:if="${flight.roundTrip == false }"> This flight is one way. </p>
+
             <p th:if="${flight.layover == true}"> There is a Layover</p>
         <p th:inline="text"> Flight capacity <i>[[${flight.flightCapacity}]]</i></p>
         <p th:inline="text"> You have <i> [[${flight.rewardPoints}]]</i>
@@ -55,11 +57,69 @@
         <br>
 
 
+        <form autocomplete="off" action="#" th:action="@{/processflight}" th:object="${flight}" method="post">
+            <!--<input th:field="*{id}" type="hidden"/>-->
+        <table class="table table-hover table-striped" style="width:100%">
+        <thead class="thead-light">
+        <tr>
+
+
+            <th sec:authorize="isAuthenticated()">Select Seat</th>
+            <th sec:authorize="isAuthenticated()">Select Class</th>
+            <th sec:authorize="isAuthenticated()">Select Quantity</th>
+
+        </tr>
+        </thead>
+            <td sec:authorize="isAuthenticated()">
+                <div sec:authorize="hasAuthority('USER')">
+
+        <select th:field="*{seatType}" id="seatType" name="seatType" />
+        <option value="window">Window</option>
+        <option value="aisle ">Aisle </option>
+        </select>
+                </div>
+        </td>
+
+            <td sec:authorize="isAuthenticated()">
+                <div sec:authorize="hasAuthority('USER')">
+
+                    <select th:field="*{seatClass}" id="seatClass" name="seatClass" />
+                    <option value="first">First Class</option>
+                    <option value="business">Business Class </option>
+                    <option value="economy">Economy Class </option>
+
+                    </select>
+                </div>
+            </td>
+
+            <td sec:authorize="isAuthenticated()">
+                <div sec:authorize="hasAuthority('USER')">
+            <div class="form-group col-sm-2">
+                <!--<label for="cardExpYear">Expiration year</label>-->
+                <input type="" class="form-control"
+                       id="cardExpYear" placeholder="10 " th:field="*{quantity}">
+                <strong>
+                    <span class="error-message"
+                          th:errors="*{quantity}"
+                          th:if="${#fields.hasErrors('quantity')}">
+                          Please type quantity.
+                    </span>
+                </strong>
+            </div>
+                </div>
+            </td>
+
+        </table>
+
         <h6 sec:authorize="!isAuthenticated()"> <b>Register to select flights </b> <a href="/register"> Register here</a>
 
             Already registered? <a href="/login"> Sign in </a> </b> </h6>
         <a sec:authorize="isAuthenticated()" class="btn btn-primary" th:href="@{/payment/{id}(id=${flight.id})}" role="button" > Select flight </a>
+
+        </form>
     </div>
+
+
 </div>
 
 
@@ -75,8 +135,7 @@
 
 
 
-    </div>
-</div>
+
 <div th:replace="base :: footer"></div>
 
 </body>
