Added functionality to adjust the flight with information chosen on the home page

--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -117,7 +117,7 @@
 
     <form autocomplete="off" action="#" th:action="@{/payment}" th:object="${card}" method="post">
 
-        <input type="hidden" th:value="${flight.id}" name="flightId"></input>
+        <input type="hidden" th:value="${flight.id}" name="flightId">
 
         <input th:field="*{id}" type="hidden"/>
 
