--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,9 +57,13 @@
         <br>
 
 
-        <form autocomplete="off" action="#" th:action="@{/processflight}" th:object="${flight}" method="post">
-            <!--<input th:field="*{id}" type="hidden"/>-->
-        <table class="table table-hover table-striped" style="width:100%">
+        <form autocomplete="off" action="#" th:action="@{/processFlight}" th:object="${flight}" method="post">
+
+<!--            <input type="hidden" th:field="*{id}" name="flightId2">-->
+
+            <input type="hidden" th:value="${flight.id}" name="flightId"/>
+
+            <table class="table table-hover table-striped" style="width:100%">
         <thead class="thead-light">
         <tr>
 
@@ -73,7 +77,7 @@
             <td sec:authorize="isAuthenticated()">
                 <div sec:authorize="hasAuthority('USER')">
 
-        <select th:field="*{seatType}" id="seatType" name="seatType" />
+        <select id="seatType" name="seatType" th:field="*{seatType}">
         <option value="window">Window</option>
         <option value="aisle ">Aisle </option>
         </select>
@@ -83,7 +87,7 @@
             <td sec:authorize="isAuthenticated()">
                 <div sec:authorize="hasAuthority('USER')">
 
-                    <select th:field="*{seatClass}" id="seatClass" name="seatClass" />
+                    <select th:field="*{seatClass}" id="seatClass" name="seatClass" >
                     <option value="first">First Class</option>
                     <option value="business">Business Class </option>
                     <option value="economy">Economy Class </option>
@@ -96,8 +100,7 @@
                 <div sec:authorize="hasAuthority('USER')">
             <div class="form-group col-sm-2">
                 <!--<label for="cardExpYear">Expiration year</label>-->
-                <input type="" class="form-control"
-                       id="cardExpYear" placeholder="10 " th:field="*{quantity}">
+                <input type="text" id="cardExpYear" placeholder="1" th:field="*{quantity}" name="quantity"/>
                 <strong>
                     <span class="error-message"
                           th:errors="*{quantity}"
@@ -114,9 +117,10 @@
         <h6 sec:authorize="!isAuthenticated()"> <b>Register to select flights </b> <a href="/register"> Register here</a>
 
             Already registered? <a href="/login"> Sign in </a> </b> </h6>
-        <a sec:authorize="isAuthenticated()" class="btn btn-primary" th:href="@{/payment/{id}(id=${flight.id})}" role="button" > Select flight </a>
-
+<!--        <a sec:authorize="isAuthenticated()" class="btn btn-primary" th:href="@{/payment/{id}(id=${flight.id})}" role="button" > Select flight </a>-->
+        <input type="submit" value="Select Flight" sec:authorize="isAuthenticated()" class="btn btn-primary"/>
         </form>
+
     </div>
 
 
