moved the total cost method to the flight class

--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -72,10 +72,10 @@
             </div>
 
 
-            <!--<td>-->
-            <!--<span th:text="${flight.user.getTotalCost()}"></span>-->
+            <td>
+            <span th:text="${flight.totalCost}"></span>
 
-            <!--</td>-->
+            </td>
 
 
 
