--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:sec="https://www.thymeleaf.org/extras/spring-security"
+      xmlns:th="https://www.thymeleaf.org">
 <head>
     <!--Required meta tags -->
     <meta charset="UTF-8">
@@ -64,6 +64,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about">Cantact Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/deals">DEALS</a>
+                    </li>
+
                 </ul>
             </div>
         </nav>
