--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -59,7 +59,7 @@
 
 
             <td>
-                <span th:text="${flight.price}"></span>
+                <span th:text="${flight.totalCost}"></span>
 
             </td>
 
