--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -13,11 +13,17 @@
         <!-- Bootstrap CSS -->
         <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet"/>
+<!--        Google Fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+        <!--My Css-->
+        <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     </div>
 </head>
 <body>
 <div th:fragment="navbar">
     <nav class="navbar navbar-light" style="background-color: #33E9FF;">
+        <p class="fancy-text">EzBreezyFlights</p>
+
         <nav class="navbar-expand-lg bg-light navbar-light">
             <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse"
