--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -68,6 +68,9 @@
             </td>
         </tr>
     </table>
+    <img />
+    <img alt="QR Code" src="/pictures/MyQRCode.png"/>
+
 </div>
 </body>
 </html>
