Updated the Readme file

--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -68,8 +68,7 @@
             </td>
         </tr>
     </table>
-    <img />
-    <img alt="QR Code" src="/pictures/MyQRCode.png"/>
+    <img alt="QR Code" src="../resources/main/src/MyQRCode.png">
 
 </div>
 </body>
