changed the picture formatting to try and get it to show up. Still can't get it to show

--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -68,7 +68,7 @@
             </td>
         </tr>
     </table>
-    <img alt="QR Code" src="../resources/main/src/MyQRCode.png">
+    <img alt="QR Code" src="./MyQRCode.png">
 
 </div>
 </body>
