--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -23,6 +23,8 @@
             <th>Arrival Location</th>
             <th>Departure Date</th>
             <th>Return Date</th>
+            <th>Departure Time</th>
+            <th>Arrival Time</th>
             <th>Price</th>
             <th>Quantity</th>
 
@@ -50,10 +52,20 @@
             </td>
 
             <td>
-                <span th:text="${flight.endDate}"></span>
+                <span th:if="${flight.roundTrip == true }" th:text="${flight.endDate}"></span>
+                <span th:if="${flight.roundTrip == false }" th:inline="text">N/A</span>
 
             </td>
 
+            <td>
+                <span th:text="${flight.startTime}"></span>
+
+            </td>
+
+            <td>
+                <span th:text="${flight.endTime}"></span>
+
+            </td>
 
 
 
