Added a tax method in the flight class

--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -148,15 +148,15 @@
 <!--            </td>-->
 
 
-            <td>
-                <span th:text="${flight.startTime}"></span>
+<!--            <td>-->
+<!--                <span th:text="${flight.startTime}"></span>-->
 
-            </td>
+<!--            </td>-->
 
-            <td>
-                <span th:text="${flight.endTime}"></span>
+<!--            <td>-->
+<!--                <span th:text="${flight.endTime}"></span>-->
 
-            </td>
+<!--            </td>-->
 
 
 <!--            <td>-->
@@ -172,7 +172,7 @@
 <!--    </table>-->
 
         <div>
-    <img alt="QR Code" src="./MyQRCode.png">
+    <img alt="QR Code" src="/pictures/MyQRCode.jpg">
         </div>
 </div>
         </div>
