--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -22,7 +22,7 @@
 <body>
 <div th:fragment="navbar">
     <nav class="navbar navbar-light" style="background-color: #33E9FF;">
-        <p class="fancy-text">EzBreezyAirways</p>
+        <a href="/"><p class="fancy-text dropdown-item">EzBreezyAirways</p></a>
 
         <nav class="navbar-expand-lg bg-light navbar-light">
             <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
