--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -33,7 +33,7 @@
                 <div class="col-xs-6 col-sm-6 col-md-6 text-right">
                     <br/><br/><br/>
                     <p>
-                        <em>Date: 5th Aug, 2019</em>
+                        <em>Date: 6th Aug, 2019</em>
                     </p>
                     <p>
                         <em> Itinerary #: 34522677W</em>
@@ -67,7 +67,7 @@
 
                 </tr>
                 <tr>
-                    <td class="col-md-9"><em th:inline="text">Depart:[[${flight.startDate}]] [[${flight.startTime}]]</em></td> </td>
+                    <td class="col-md-9"><em th:inline="text">Depart:[[${flight.startDate}]] [[${flight.startTime}]]</em></td>
                     <td class="col-md-1" style="text-align: center">   </td>
                     <td class="col-md-1 text-center"></td>
                     <td class="col-md-1 text-center"></td>
@@ -79,19 +79,15 @@
                     <td class="col-md-1 text-center"> </td>
                 </tr>
                 <tr>
-
-                    <td class="text-right">
-
-                        <p>
-                            <strong>Tax: </strong>
-                        </p></td>
-                    <td class="text-center">
-                        <p>
-
-                        </p>
-                        </td>
+                    <td class="col-md-9"> </td>
+                    <td class="col-md-1"></td>
+                    <td class="col-md-1"></td>
+                    <td class="col-md-1 text-right"><h5><strong th:inline="text">Tax:[[${flight.tax}]]</strong></h5> </td>
                 </tr>
                 <tr>
+                    <td class="col-md-9"> </td>
+                    <td class="col-md-1"></td>
+                    <td class="col-md-1"></td>
 
                     <td class="text-right"><h4><strong>Total: </strong></h4></td>
                     <td class="text-center text-danger"><h4><strong>$   </strong></h4></td>
