Updated the styling of the title after making it a link

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,6 +5,12 @@
     padding: 0;
 }
 
+nav a{
+    color:black;
+}
+
 nav a:hover{
     text-decoration: none;
+    background-color: aqua;
+    color: black;
 }
