--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -81,20 +81,22 @@
                 <tr>
                     <td class="col-md-9"> </td>
                     <td class="col-md-1"></td>
-                    <td class="col-md-1"></td>
-                    <td class="col-md-1 text-right"><h5><strong th:inline="text">Tax:[[${flight.tax}]]</strong></h5> </td>
+                    <td class="col-md-1 text-right"><strong>Tax:  </strong></td>
+                    <td class="col-md-1 text-center"><h5><strong>$[[${flight.tax}]]</strong></h5> </td>
                 </tr>
                 <tr>
-                    <td class="col-md-9"> </td>
+                    <td class="col-md-9"> All prices quoted in US dollars. </td>
                     <td class="col-md-1"></td>
-                    <td class="col-md-1"></td>
+                    <td class="col-md-1 text-right"><h4><strong>Total: </strong></h4></td>
 
-                    <td class="text-right"><h4><strong>Total: </strong></h4></td>
-                    <td class="text-center text-danger"><h4><strong>$   </strong></h4></td>
+                    <td class="col-md-1 text-center text-danger"><h4><strong>[[${flight.totalWithTax}]]   </strong></h4></td>
 
                 </tr>
                 <tr>
-                    <td class="col-md-9 text-right">All prices quoted in US dollars. </td>
+                    <td class="col-md-9"></td>
+                    <td class="col-md-1"></td>
+                    <td class="col-md-1 text-right"> </td>
+                    <td class="col-md-1"></td>
                 </tr>
                 </tbody>
                 </table>
@@ -103,69 +105,7 @@
 
 </div>
             </tr>
-<!--    <table class="table table-hover table-striped" style="width:100%">-->
 
-<!--        <thead class="thead-light">-->
-<!--        <tr>-->
-
-<!--            <th>Departure Location</th>-->
-<!--            <th>Arrival Location</th>-->
-<!--            <th>Departure Date</th>-->
-<!--            <th>Return Date</th>-->
-<!--            <th>Price</th>-->
-<!--            <th>Quantity</th>-->
-
-<!--        </tr>-->
-<!--        </thead>-->
-
-
-
-
-<!--        <tr th:each="flight : ${flights}">-->
-
-<!--            <td>-->
-<!--                <span th:text="${flight.startLocation}"></span>-->
-
-<!--            </td>-->
-
-<!--            <td>-->
-<!--                <span th:text="${flight.endLocation}"></span>-->
-
-<!--            </td>-->
-
-<!--            <td>-->
-<!--                <span th:text="${flight.startDate}"></span>-->
-
-<!--            </td>-->
-
-<!--            <td>-->
-<!--                <span th:text="${flight.endDate}"></span>-->
-
-<!--            </td>-->
-
-
-<!--            <td>-->
-<!--                <span th:text="${flight.startTime}"></span>-->
-
-<!--            </td>-->
-
-<!--            <td>-->
-<!--                <span th:text="${flight.endTime}"></span>-->
-
-<!--            </td>-->
-
-
-<!--            <td>-->
-<!--                <span th:text="${flight.totalCost}"></span>-->
-
-<!--            </td>-->
-
-<!--            <td>-->
-<!--                <span th:text="${flight.quantity}"></span>-->
-
-<!--            </td>-->
-<!--        </tr>-->
-<!--    </table>-->
 
         <div>
     <img alt="QR Code" th:src="@{/pictures/MyQRCode.png}">
@@ -173,6 +113,7 @@
 </div>
         </div>
 </div>
+<div th:replace="base :: footer"></div>
 </body>
 </html>
 
