Added Functionality for the admin to create flights

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,7 +13,7 @@
 
 
     <h2>Admin Page!</h2>
-
+    <a href="/addFlight">Add a Flight</a>
     <table class="table table-hover table-striped" style="width:100%">
     <th>User First Name</th>
     <th>User Last Name</th>
